<?xml version="1.0"?>
<package format="2">
  <name>ouster_client</name>
  <version>0.1.0</version>
  <description>Ouster example ROS client</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libjsoncpp</build_depend>
  <build_depend>roscpp</build_depend>
  
  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export></export>
</package>
